# trino-iceberg-maintenance

./: README.md  docker-compose-trino.yml  pyproject.toml  trino_iceberg_maintenance.py
docker/trino/catalog/: iceberg.properties
tests/: conftest.py  test_maintenance.py
trino_iceberg_maintenance/: __main__.py
